--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
       <li>JAVA THE BEGINNERES</li>
     </ol>
     <hr size="3" noshade>
-    <h2>work experience</h2>
+    <h2>Education</h2>
     <table cellspacing="10" >
       <thead>
         <tr>
-          <th>Dates</th>
-          <th>Work</th>
+          <th>Year</th>
+          <th>school</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>2010-2013</td>
-          <td>Senior Consulatant at TCS</td>
+          <td>2019-2023</td>
+          <td>Student at Panimalar Engineering College</td>
         </tr>
         <tr>
-          <td>2013</td>
-          <td>FULL STACK developer</td>
+          <td>2017-2019</td>
+          <td>Vijayratna Junior College</td>
         </tr>
       </tbody>
     </table>
